--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,9 +16,10 @@ body{
       background-color: rgba(0,0,0,0.015);
       border-radius: 10px;
       padding: 15px;
+      box-shadow: 0px 1px 20px 2px #e8ecf1;
   }
   h1{
-    font-family: 'Candal' sans-serif;;
+    font-family: 'Candal', sans-serif;
     color: #2b2b2b;
     text-shadow: 4px 4px 0px rgba(0,0,0,0.1);
   }
